@@ -10,6 +10,7 @@ Changes since 2.3.13:
 
 Lib/
 * New methods LDAPObject.result4() and LDAPObject.extop_result()
+* New (optional) class ldap.controls.AssertionControl
 
 Modules/
 * ldapcontrol.c: Fixed encode_assertion_control()
